--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-  "name": "workspace",
-  "version": "1.0.0",
-  "description": "Social Network for Developers",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/suraj8848mt/workspace.git"
-  },
-  "author": "tommt",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/suraj8848mt/workspace/issues"
-  },
-  "homepage": "https://github.com/suraj8848mt/workspace#readme",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.8.10",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "validator": "^12.2.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
-  }
+    "name": "workspace",
+    "version": "1.0.0",
+    "description": "Social Network for Developers",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js",
+        "server": "nodemon server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/suraj8848mt/workspace.git"
+    },
+    "author": "tommt",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/suraj8848mt/workspace/issues"
+    },
+    "homepage": "https://github.com/suraj8848mt/workspace#readme",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.8.10",
+        "passport": "^0.4.1",
+        "passport-jwt": "^4.0.0",
+        "validator": "^12.2.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.2"
+    }
 }
